# docmind-ai-llm

./: .coderabbit.yaml  .dockerignore  .env.example  .gh_pr_view.json  .gitignore  .pre-commit-config.yaml  .pylintrc  .uvrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEPENDENCY_VERSIONING_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURE_BRANCH_PR_STRATEGY.md  FINAL_REFACTORING_SUMMARY.md  FINAL_VALIDATION_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DETAILED.md  INTEGRATION_TESTING_SUMMARY.md  P0_REFACTOR_TASKS.md  PERFORMANCE_TESTS_SUMMARY.md  PHASE2_COVERAGE_REPORT.md  PHASE2_TEST_COMPLETION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PR_IMPLEMENTATION_PROMPTS.md  README.md  REFACTORING_TASKS.md  REMAINING_TASKS_AND_FINDINGS.md  REMEDIATION_STATUS_REPORT.md  SECURITY.md  SUPPORT.md  TEST_VALIDATION_REPORT.md  TODO-COMPLETED.md  TODO.md  VERIFIED_REFACTORING_PLAN.md  __init__.py  agent_factory.py  (+35 more)
.claude/commands/: adr-spec-alignment.md
.gh/: comment_table.json  issue_comments.json  query.graphql  repo_full.txt  review_comments.json  review_threads.json  reviews.json
.github/: dependabot.yml  pytest.nocov.ini
.github/workflows/: ci.yml  docs-ci.yml  pr-validation.yml  release.yml  semantic-pull-request.yml
.opencode/plan/: fix_ci_timeout.md
.spec-updates/: journal.json  update-plan-20250119.json
agents/: __init__.py  agent_utils.py  tool_factory.py
codemods/: pr-30-autofix.patch
data/eval/: README.md
docs/: ARCHITECTURE_OVERVIEW.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE_BENCHMARK_REPORT.md  PRD.md  SPACY_SETUP.md  TEST_CONFIGURATION.md  TODO-integration-modernization.md  USER_CONFIGURATION.md  overview.md
docs/adrs/: 001-architecture-overview.md  002-embedding-choices.md  003-gpu-optimization.md  004-document-loading.md  005-text-splitting.md  006-analysis-pipeline.md  007-reranking-strategy.md  008-session-persistence.md  009-ui-framework.md  010-langchain-integration.md  011-langgraph-multi-agent.md  011-llamaindex-react-agent.md  012-async-performance-optimization.md  013-rrf-hybrid-search.md  014-colbert-reranking.md  015-llamaindex-migration.md  016-multimodal-embeddings.md  017-default-model-strategy.md  018-refactoring-decisions.md  019-multi-backend-llm-strategy.md  020-llamaindex-settings-migration.md  021-llamaindex-native-architecture-consolidation.md  022-tenacity-resilience-integration.md  (+29 more)
docs/api/: api.md  (+4 more)
examples/: infrastructure_demo.py
library_research/: 00_cluster_manifest.json  00_cluster_overview.md  01-dependency_actions.json  01-dependency_audit.md  10-document_ingestion-plan.json  10-document_ingestion-research.md  10-embedding_vectorstore-plan.json  10-embedding_vectorstore-research.md  10-infrastructure_core-plan.json  10-infrastructure_core-research.md  10-llamaindex_ecosystem-plan.json  10-llamaindex_ecosystem-research.md  10-llm_runtime_core-plan.json  10-llm_runtime_core-research.md  10-multimodal_processing-plan.json  10-multimodal_processing-research.md  10-observability_dev-plan.json  10-observability_dev-research.md  10-orchestration_agents-plan.json  10-orchestration_agents-research.md  10-rag_reranking-plan.json  10-rag_reranking-research.md  20-document_ingestion-integration-plan.md  20-document_ingestion-plan.json  20-embedding_vectorstore-integration-plan.md  20-embedding_vectorstore-plan.json  20-infrastructure_core-integration-plan.md  20-infrastructure_core-plan.json  20-llamaindex_ecosystem-integration-plan.md  20-llamaindex_ecosystem-plan.json  20-llm_runtime_core-integration-plan.md  20-llm_runtime_core-plan.json  20-multimodal_processing-integration-plan.md  20-multimodal_processing-plan.json  20-observability_dev-integration-plan.md  20-observability_dev-plan.json  20-orchestration_agents-integration-plan.md  20-orchestration_agents-plan.json  20-rag_reranking-integration-plan.md  20-rag_reranking-plan.json  (+7 more)
plans/: 001-mutation-job-ownership.md  002-truthful-chat-states.md  003-page-startup-performance.md  004-browser-acceptance.md  005-workspace-shell.md  006-documents-workspace.md  007-chat-evidence.md  008-settings-information-architecture.md  009-analytics-operations.md  README.md
schemas/: doc_mapping.schema.json  leaderboard_beir.schema.json  leaderboard_ragas.schema.json
scripts/: README.md  analyze_github_reviews.py  backup.py  benchmark_parsing.py  check_coverage.py  check_links.py  check_release_contract.py  check_ui_import_boundary.py  cleanup_collections.py  container_entrypoint.sh  container_health.py  demo_metrics_console.py  docker_fetch_torch_wheel.py  end_to_end_test.py  gpu_setup.sh  gpu_validation.py  mm_backfill_named_vectors.py  parser_health.py  performance_monitor.py  performance_monitor_ci.py  performance_validation.py  qdrant_fusion_smoke.py  qdrant_schema.py  quality_gates_ci.py  run_app.sh  run_ingestion_demo.py  run_quality_gates.py  run_tests.py  run_tests_ci_optimized.py  smoke_built_wheel.py  start_qdrant_local.sh  test_ci.py  test_dependency_cleanup.py  test_gpu.py  test_health.py  test_staging.py  update_progress_counts.py  validate_requirements.py  validate_schemas.py  validate_settings_only.py  (+3 more)
src/: __init__.py  app.py  containers.py  di_demo.py  dspy_integration.py  main.py  prompts.py  ui_helpers.py  version.py  vllm_config.py
tests/: README.md  TEST_FRAMEWORK.md  __init__.py  conftest.py  shared_fixtures.py  test_agents.py  test_app.py  test_embeddings.py  test_end_to_end.py  test_hybrid_search.py  test_infrastructure_validation.py  test_integration.py  test_integration_comprehensive.py  test_model_update_spec.py  test_models.py  test_performance.py  test_performance_integration.py  test_real_validation.py  test_reranking.py  test_utils.py
utils/: __init__.py  client_factory.py  document_loader.py  embedding_factory.py  embedding_utils.py  error_recovery.py  exceptions.py  hardware_utils.py  index_builder.py  logging_config.py  logging_utils.py  memory_utils.py  model_manager.py  monitoring.py  qdrant_utils.py  retry_utils.py  spacy_utils.py  utils.py  validation_utils.py
(+1368 files in other folders)
